--- a/_config.yml
+++ b/_config.yml
@@ -127,8 +127,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Achin (Ace) Kulshrestha # blog_name will be displayed in your blog page
+blog_description: Penning Adventures at the Crossroads of ML and Privacy
 permalink: /blog/:year/:title/
 
 # Pagination
