--- a/_config.yml
+++ b/_config.yml
@@ -127,8 +127,9 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Achin (Ace) Kulshrestha # blog_name will be displayed in your blog page
-blog_description: Penning Adventures at the Crossroads of ML and Privacy
+blog_name: Achin Kulshrestha # blog_name will be displayed in your blog page
+blog_description: Penning Adventures in ML, Privacy and Data Visualization
+blog_disclaimer: My views like my favorite socks, distinctly mine and unrelated to my employer
 permalink: /blog/:year/:title/
 
 # Pagination
